dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ubmc_mgmtd, 1.0)

AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile 
                 mgmtd/Makefile 
                 mgmtd/src/Makefile
                 cli/Makefile 
                 cli/src/Makefile
])


AC_OUTPUT
