AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4

include_HEADERS = \
    ubmc_shm_state.h \
    ubmc_state.h    \
    ubmc_ipmi_sel.h \
    ubmc_ipmi.h \
    ubmc_common.h \
    ubmc_ipmi_hst_pwr_monitor.h\
    ubmc_ipmi_config.h\
    ubmc_ipmi_sel_sensor.h\
    ubmc_ipmi_board.h \
    ubmc_ipmi_check_st.h


